# hex-o-spell-experiment

./: .pre-commit-config.yaml  BRANCH_PROTECTION.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  python-ci.yml  security-scan.yml
src/: main.py
src/data_manager/: __init__.py  sampling_strategies.py  session_manager.py  storage_handler.py
src/egg_headset/: __init__.py
src/gui/: __init__.py
src/hex_o_spell_experiment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_data_manager.py  test_egg_headset.py  test_gui.py
