[project]
name = "hex-o-spell-experiment"
version = "0.1.0"
description = "A pygame-based experiment with GUI, egg headset, and data manager components"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.5.2",
    "numpy>=1.24.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.11.1"
]

[project.optional-dependencies]
dev = [
    "black>=23.9.1",
    "flake8>=6.0.0",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short"
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py313']
skip-string-normalization = true